chore: Refactor helper methods in GenerateContentResponse
PiperOrigin-RevId: 723144033