@@ -21,9 +21,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.common.collect.ImmutableList;
-import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import org.junit.jupiter.api.Test;
 
 public class GenerateContentResponseTest {
@@ -33,10 +31,12 @@ public class GenerateContentResponseTest {
   private static final FunctionCall FUNCTION_CALL_2 =
       FunctionCall.builder().setName("funcCall2").setArgs(Map.of("key2", "val2")).build();
 
-  private static final Part PART_1 =
-      Part.builder().setText("text1").setFunctionCall(FUNCTION_CALL_1).setThought(false).build();
-  private static final Part PART_2 =
-      Part.builder().setText("text2").setFunctionCall(FUNCTION_CALL_2).setThought(false).build();
+  private static final Part PART_1 = Part.builder().setText("text1").build();
+  private static final Part PART_2 = Part.builder().setText("text2").build();
+  private static final Part PART_FUNCTION_CALL_1 =
+      Part.builder().setFunctionCall(FUNCTION_CALL_1).setThought(false).build();
+  private static final Part PART_FUNCTION_CALL_2 =
+      Part.builder().setFunctionCall(FUNCTION_CALL_2).setThought(false).build();
   private static final Part PART_WITH_THOUGHT =
       Part.builder().setText("text3").setThought(true).build();
 
@@ -46,6 +46,12 @@ public class GenerateContentResponseTest {
       Content.builder().setParts(ImmutableList.of(PART_2)).build();
   private static final Content CONTENT_WITH_MULTIPLE_PARTS =
       Content.builder().setParts(ImmutableList.of(PART_1, PART_2)).build();
+  private static final Content CONTENT_WITH_FUNCTION_CALLS =
+      Content.builder()
+          .setParts(ImmutableList.of(PART_FUNCTION_CALL_1, PART_FUNCTION_CALL_2))
+          .build();
+  private static final Content CONTENT_WITH_MIXED_PARTS =
+      Content.builder().setParts(ImmutableList.of(PART_1, PART_FUNCTION_CALL_1)).build();
   private static final Content CONTENT_WITH_EMPTY_PARTS =
       Content.builder().setParts(ImmutableList.of()).build();
   private static final Content CONTENT_WITH_THOUGHT =
@@ -61,16 +67,18 @@ public class GenerateContentResponseTest {
       Candidate.builder().setContent(CONTENT_WITH_THOUGHT).setFinishReason("STOP").build();
   private static final Candidate CANDIDATE_WITH_MULTIPLE_PARTS =
       Candidate.builder().setContent(CONTENT_WITH_MULTIPLE_PARTS).setFinishReason("STOP").build();
+  private static final Candidate CANDIDATE_WITH_FUNCTION_CALLS =
+      Candidate.builder().setContent(CONTENT_WITH_FUNCTION_CALLS).setFinishReason("STOP").build();
+  private static final Candidate CANDIDATE_WITH_MIXED_PARTS =
+      Candidate.builder().setContent(CONTENT_WITH_MIXED_PARTS).setFinishReason("STOP").build();
   private static final Candidate CANDIDATE_WITH_UNEXPECTED_FINISH_REASON =
       Candidate.builder().setContent(CONTENT_1).setFinishReason("SAFETY").build();
 
   @Test
   public void testParts_EmptyCandidates() {
-    GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(ImmutableList.of()).build();
+    GenerateContentResponse response = GenerateContentResponse.builder().build();
 
-    Exception e = assertThrows(IllegalArgumentException.class, () -> response.parts());
-    assertEquals("This response has no candidate.", e.getMessage());
+    assertEquals(null, response.parts());
   }
 
   @Test
@@ -114,165 +122,138 @@ public class GenerateContentResponseTest {
 
   @Test
   public void testText_EmptyCandidates() {
+    GenerateContentResponse response = GenerateContentResponse.builder().build();
+
+    assertEquals(null, response.text());
+  }
+
+  @Test
+  public void testText_UnexpectedFinishReason() {
     GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of()).build();
+        GenerateContentResponse.builder()
+            .setCandidates(ImmutableList.of(CANDIDATE_WITH_UNEXPECTED_FINISH_REASON))
+            .build();
 
-    Optional<String> result = response.text();
-
-    assertTrue(result.isEmpty());
+    Exception e = assertThrows(IllegalArgumentException.class, () -> response.text());
+    assertEquals("The response finished unexpectedly with reason SAFETY.", e.getMessage());
   }
 
   @Test
   public void testText_MultipleCandidates() {
-    Part part1 = Part.builder().setText("text1").setThought(false).build();
-    Content content1 = Content.builder().setParts(List.of(part1)).build();
-    Candidate candidate1 = Candidate.builder().setContent(content1).build();
-
-    Part part2 = Part.builder().setText("text2").setThought(false).build();
-    Content content2 = Content.builder().setParts(List.of(part2)).build();
-    Candidate candidate2 = Candidate.builder().setContent(content2).build();
-
     GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of(candidate1, candidate2)).build();
+        GenerateContentResponse.builder()
+            .setCandidates(ImmutableList.of(CANDIDATE_1, CANDIDATE_2))
+            .build();
 
-    Optional<String> result = response.text();
+    String result = response.text();
 
-    assertTrue(result.isPresent());
-    assertEquals("text1", result.get());
+    assertEquals("text1", result);
   }
 
   @Test
   public void testText_EmptyParts() {
-    Content content = Content.builder().setParts(List.of()).build();
-    Candidate candidate = Candidate.builder().setContent(content).build();
     GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of(candidate)).build();
+        GenerateContentResponse.builder()
+            .setCandidates(ImmutableList.of(CANDIDATE_WITH_EMPTY_PARTS))
+            .build();
 
-    Optional<String> result = response.text();
+    String result = response.text();
 
-    assertTrue(result.isEmpty());
+    assertEquals(null, result);
   }
 
   @Test
   public void testText_PartWithText() {
-    Part part = Part.builder().setText("text").setThought(false).build();
-    Content content = Content.builder().setParts(List.of(part)).build();
-    Candidate candidate = Candidate.builder().setContent(content).build();
     GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of(candidate)).build();
+        GenerateContentResponse.builder().setCandidates(ImmutableList.of(CANDIDATE_1)).build();
 
-    Optional<String> result = response.text();
+    String result = response.text();
 
-    assertTrue(result.isPresent());
-    assertEquals("text", result.get());
+    assertEquals("text1", result);
   }
 
   @Test
   public void testText_MultiplePartsWithText() {
-    Part part1 = Part.builder().setText("text1").setThought(false).build();
-    Part part2 = Part.builder().setText("text2").setThought(false).build();
-    Content content = Content.builder().setParts(List.of(part1, part2)).build();
-    Candidate candidate = Candidate.builder().setContent(content).build();
     GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of(candidate)).build();
+        GenerateContentResponse.builder()
+            .setCandidates(ImmutableList.of(CANDIDATE_WITH_MULTIPLE_PARTS))
+            .build();
 
-    Optional<String> result = response.text();
+    String result = response.text();
 
-    assertTrue(result.isPresent());
-    assertEquals("text1text2", result.get());
+    assertEquals("text1text2", result);
   }
 
   @Test
   public void testText_MultiplePartsWithThought() {
-    Part part1 = Part.builder().setText("text1").setThought(false).build();
-    Part part2 = Part.builder().setText("text2").setThought(true).build();
-    Content content = Content.builder().setParts(List.of(part1, part2)).build();
-    Candidate candidate = Candidate.builder().setContent(content).build();
     GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of(candidate)).build();
+        GenerateContentResponse.builder()
+            .setCandidates(ImmutableList.of(CANDIDATE_WITH_THOUGHT))
+            .build();
 
-    Optional<String> result = response.text();
+    String result = response.text();
 
-    assertTrue(result.isPresent());
-    assertEquals("text1text2", result.get());
+    assertEquals("text1", result);
   }
 
   @Test
-  public void testText_PartWithInlineData() {
-    Part part1 = Part.builder().setText("text1").setThought(false).build();
-    Part part2 = Part.builder().setInlineData(Blob.builder().build()).build();
-    Content content = Content.builder().setParts(List.of(part1, part2)).build();
-    Candidate candidate = Candidate.builder().setContent(content).build();
+  public void testText_MixedParts() {
     GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of(candidate)).build();
+        GenerateContentResponse.builder()
+            .setCandidates(ImmutableList.of(CANDIDATE_WITH_MIXED_PARTS))
+            .build();
 
-    assertThrows(IllegalArgumentException.class, () -> response.text());
+    Exception e = assertThrows(IllegalArgumentException.class, () -> response.text());
+    assertEquals(
+        String.format("Only text parts are supported, but got %s", PART_FUNCTION_CALL_1),
+        e.getMessage());
   }
 
   @Test
   public void testFunctionCalls_EmptyCandidates() {
-    GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of()).build();
+    GenerateContentResponse response = GenerateContentResponse.builder().build();
 
-    Optional<List<FunctionCall>> result = response.functionCalls();
+    ImmutableList<FunctionCall> result = response.functionCalls();
 
-    assertTrue(result.isEmpty());
-  }
-
-  @Test
-  public void testFunctionCalls_MultipleCandidates() {
-    FunctionCall functionCall1 =
-        FunctionCall.builder().setName("funcCall1").setArgs(Map.of("key1", "val1")).build();
-    Part part1 = Part.builder().setFunctionCall(functionCall1).build();
-    Content content1 = Content.builder().setParts(List.of(part1)).build();
-    Candidate candidate1 = Candidate.builder().setContent(content1).build();
-
-    FunctionCall functionCall2 =
-        FunctionCall.builder().setName("funcCall2").setArgs(Map.of("key2", "val2")).build();
-    Part part2 = Part.builder().setFunctionCall(functionCall2).build();
-    Content content2 = Content.builder().setParts(List.of(part2)).build();
-    Candidate candidate2 = Candidate.builder().setContent(content2).build();
-
-    GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of(candidate1, candidate2)).build();
-
-    Optional<List<FunctionCall>> result = response.functionCalls();
-
-    assertTrue(result.isPresent());
-    assertEquals(1, result.get().size());
-    assertEquals(functionCall1, result.get().get(0));
+    assertEquals(null, result);
   }
 
   @Test
   public void testFunctionCalls_EmptyParts() {
-    Content content = Content.builder().setParts(List.of()).build();
-    Candidate candidate = Candidate.builder().setContent(content).build();
     GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of(candidate)).build();
+        GenerateContentResponse.builder()
+            .setCandidates(ImmutableList.of(CANDIDATE_WITH_EMPTY_PARTS))
+            .build();
 
-    Optional<List<FunctionCall>> result = response.functionCalls();
+    ImmutableList<FunctionCall> result = response.functionCalls();
 
-    assertTrue(result.isEmpty());
+    assertEquals(null, result);
   }
 
   @Test
   public void testFunctionCalls_PartWithFunctionCall() {
-    FunctionCall functionCall1 =
-        FunctionCall.builder().setName("funcCall1").setArgs(Map.of("key1", "val1")).build();
-    FunctionCall functionCall2 =
-        FunctionCall.builder().setName("funcCall2").setArgs(Map.of("key2", "val2")).build();
-    Part part1 = Part.builder().setFunctionCall(functionCall1).build();
-    Part part2 = Part.builder().setFunctionCall(functionCall2).build();
-    Content content = Content.builder().setParts(List.of(part1, part2)).build();
-    Candidate candidate = Candidate.builder().setContent(content).build();
     GenerateContentResponse response =
-        GenerateContentResponse.builder().setCandidates(List.of(candidate)).build();
+        GenerateContentResponse.builder()
+            .setCandidates(ImmutableList.of(CANDIDATE_WITH_FUNCTION_CALLS))
+            .build();
 
-    Optional<List<FunctionCall>> result = response.functionCalls();
+    ImmutableList<FunctionCall> result = response.functionCalls();
 
-    assertTrue(result.isPresent());
-    assertEquals(2, result.get().size());
-    assertEquals(functionCall1, result.get().get(0));
-    assertEquals(functionCall2, result.get().get(1));
+    assertEquals(2, result.size());
+    assertEquals(FUNCTION_CALL_1, result.get(0));
+    assertEquals(FUNCTION_CALL_2, result.get(1));
+  }
+
+  @Test
+  public void testFunctionCalls_MixedParts() {
+    GenerateContentResponse response =
+        GenerateContentResponse.builder()
+            .setCandidates(ImmutableList.of(CANDIDATE_WITH_MIXED_PARTS))
+            .build();
+
+    Exception e = assertThrows(IllegalArgumentException.class, () -> response.functionCalls());
+    assertEquals(
+        String.format("Only function call parts are supported, but got %s", PART_1),
+        e.getMessage());
   }
 }
